--- a/app.yaml
+++ b/app.yaml
@@ -1,38 +1,12 @@
-runtime: nodejs
-env: flex
+runtime: python27
+api_version: 1
+threadsafe: true
 
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
 handlers:
-  - url: /static/js/(.*)
-    static_files: build/static/js/\1
-    upload: build/static/js/(.*)
-  - url: /static/css/(.*)
-    static_files: build/static/css/\1
-    upload: build/static/css/(.*)
-  - url: /static/media/(.*)
-    static_files: build/static/media/\1
-    upload: build/static/media/(.*)
-  - url: /(.*\.(json|ico))$
-    static_files: build/\1
-    upload: build/.*\.(json|ico)$
-  - url: /
-    static_files: build/index.html
-    upload: build/index.html
-  - url: /.*
-    static_files: build/index.html
-    upload: build/index.html
-readiness_check:
-  check_interval_sec: 5
-  timeout_sec: 4
-  failure_threshold: 2
-  success_threshold: 2
-  app_start_timeout_sec: 300
+- url: /
+  static_files: www/index.html
+  upload: www/index.html
+
+- url: /(.*)
+  static_files: www/\1
+  upload: www/(.*)
