--- a/app.yaml
+++ b/app.yaml
@@ -12,3 +12,8 @@ handlers:
   static_files: www/\1
   upload: www/(.*)
   secure: always
+
+- url: /(.+)
+  mime_type: text/html
+  static_files: www/\1.html
+  upload: static/(.+)
