--- a/app.yaml
+++ b/app.yaml
@@ -15,5 +15,5 @@ handlers:
 
 - url: /(.+)
   mime_type: text/html
-  static_files: www/\1.html
-  upload: www/(.+)
+  static_files: www/projects\1.html
+  upload: www/projects(.+)
